# xsscrawl

./: .replit  README.md  main.py  payloads.txt  pyproject.toml  requirements.txt
banner/: ban.py  banner.py
